--- a/src/webapp/WEB-INF/pages/hello/index.html
+++ b/src/webapp/WEB-INF/pages/hello/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div>
+    <a href="/modern.cars.com/cars">Cars!</a>
     <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
+        <h1 th:text="${msg}"/>
     </th:block>
 </div>
 </body>
