--- a/src/webapp/WEB-INF/pages/salon/cars.html
+++ b/src/webapp/WEB-INF/pages/salon/cars.html
@@ -29,7 +29,7 @@
             <input type="reset">
         </div>
     </form>
-    <th:block th:each="car : ${salon}">
+    <th:block th:each="car : ${cars}">
             <div>
                 <hr>
                 <h3>Model: </h3>
